src/App.css
html,
body {
  min-height: 100%;
  
}

a {
  text-decoration: none !important;
}

li {
  list-style: none;
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  box-sizing: 0;
}

body {
  background: #f6f6f9;
  font-family: "Museo Sans Cyrl";
  font-size: 16px;
  line-height: 19;
  color: #000;
}

.nav__item {
  color: #474747 !important;
  padding-left: 50px !important;
  width: 200px;
}

.nav__item:hover {
  content: "";
  color: #7449ef !important;
  border-bottom: 1px solid #7449ef;
  transition: all 0.1s ease;
}

.purp-icon:hover {
  color: #7449ef;
  transition: all 0.1s ease;
  cursor: pointer;
}

.purp-icon-move {
  margin-right: 10px;
}

.section {
  box-shadow: 0px 4px 14px 1px rgba(0, 0, 0, 0.12);
  border-radius: 5px;
}

.container {
  padding: 30px;
  margin: auto;
  max-width: 100%;
}

.page {
  max-width: 100%;
  margin: auto;
  padding: 30px;
}

.white-section {
  background: white;
  width: 700px;
  padding: 50px;
  margin: auto;
}

.white-section-1 {
  width: 975px;
  height: 118px;
  margin-left: 20px;
  margin: auto;
}

.white-section-2 {
  margin-top: 117px;
  margin-bottom: 47px;
  margin-right: 490px;
}

.white-section-2-card {
  width: 832px;
  height: 756px;
}

.white-section-2-card-small {
  width: 519px;
  height: 453px;
}

.show-btn {
  border: 1px solid #7449ef !important;
  color: #7449ef !important;
  padding: 15px;
}

.gray-row {
  background: #d9e3ff;
}

.card {
  position: relative;
}

.card__digits {
  font-weight: bold;
  font-family: "Museo Sans Cyrl";
  font-size: 70px;
  display: block;
  color: #ffffff;
}

.card__container {
  position: absolute;
  left: 90px;
  top: 90px;
  width: 65%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.subflex-card {
  width: 55%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/******************

Navigation



********************/
.nav-nav-navigation {
  width: 100vh;
  height: 100vh;
  background: white;
  max-width: 100%;
  display: none;
}

.active {
  display: block;
  transition: all .3s ease-in-out;
}

.nav__list {
  margin-top: 25px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.nav__link {
  color: #474747;
  font-family: Museo Sans Cyrl;
  font-size: 20px;
  line-height: 23px;
}

.nav__item {
  margin-top: 30px;
}

.nav__heading {
  color: #0057FF;
  text-align: center;
}
.nav__brand {
  display: flex;
  align-items: center;
}
.nav__logo {
  font-size: 40px;
  margin-right: 20px;
  transition: all .3s ease-in-out;
}


/******************/

